# safe-execution-protocol

./: .gitignore  README.md
client/: Cargo.toml  client_private_key.pem  client_public_key.pem  hdfs
client/src/: main.rs  parse_cluser.rs
server/: .rustc_info.json  Cargo.toml  rust-toolchain.toml  server_private_key.pem  server_public_key.pem
server/src/: main copy.rs  main.rs
testgg/: Cargo.toml
