[package]
name = "client-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }


openssl = "0.10.52"
rsa = {version = "0.9.2", features = ["sha2","pem"]}
hex = "0.4.0"