[package]
name = "server-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
openssl = "0.10.52"
rsa = {version = "0.9.2", features = ["sha2","pem"]}
hex = "0.4.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.6"